will allow user to click cat and dog and have them respond.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Talk to the web page</h1>
+    <h1>Meowzers vs Borkers</h1>
     <p>Click a button to say something to the web page. See what it says back!</p>
 
     <button class="btn btn-primary" id="hello">Say "hello"</button>
@@ -22,6 +22,7 @@
         <ul class="unstyled" id="user">
 
         </ul>
+        <img src="img/cat.jpeg" alt="Cat image." style="float: left;" class="fitter" id="cat">
       </div>
 
       <div class="col-md-6">
@@ -29,6 +30,7 @@
         <ul class="unstyled" id="webpage">
 
         </ul>
+        <img src="img/dog.jpg" alt="Dog image." style="float: right;" class="fitter" id="dog">
       </div>
     </div>
   </div>
